Finalização aula separando as views

--- a/src/views/partials/header.mustache
+++ b/src/views/partials/header.mustache
@@ -19,8 +19,8 @@
 <nav>
     <ul>
         <li class="active"><a href="/">Todos</a></li>
-        <li class="/cachorros"><a href="">Cachorros</a></li>
-        <li class="/gatos"><a href="">Gatos</a></li>
-        <li class="/peixes"><a href="">Peixes</a></li>
+        <li class=""><a href="/cachorros">Cachorros</a></li>
+        <li class=""><a href="/gatos">Gatos</a></li>
+        <li class=""><a href="/peixes">Peixes</a></li>
     </ul>
 </nav>
