--- a/src/views/pages/page.mustache
+++ b/src/views/pages/page.mustache
@@ -7,12 +7,16 @@
 {{! FIM if banner }}
 
 <div class="container list">
-    <div class="item">
-        <img src="images/pastor-alemao.jpg" class="item--image" />
-        <div class="item--name">Pastor-alemão</div>
-        <div class="item--color">Cor: Amarelo e Preto</div>
-        <div class="item--genre">Gênero: Masculino</div>
-    </div>
+    {{! FAZ TIPO UM FOR DO ARRAY LISTA }}
+    {{ #lista }}
+        <div class="item">
+            {{! PRA IMPRIMIR O ITEM DO ARRAY SÓ PRECISO USAR O NOME DO ITEM }}
+            <img src="images/{{ image }}" class="item--image" />
+            <div class="item--name">Nome: {{ name }}</div>
+            <div class="item--color">Cor: {{ color }}</div>
+            <div class="item--genre">Sexo: {{ sex }}</div>
+        </div>
+    {{ /lista }}
 </div>
 
 {{>partials/footer}}
